# Live_Sermon_Translator

./: .gitignore  README.md  pyproject.toml  test_sentence_split_2.py  transcribe_good_whisper.py
app/: __init__.py  audio_capture.py  main.py  pipeline.py  toy_async.py  transcriber.py  translator.py
