[project]
name = "live-sermon-translator"
version = "0.1.0"
description = "Terminal proof of concept for German sermon transcription and translation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "numpy",
    "pyaudio",
    "qwen-asr",
    "torch",
    "torchaudio",
]

[project.scripts]
live-sermon-translator = "app.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
